<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_margin="10dp"
    android:layout_height="match_parent"
    tools:context=".CheckOutActivity">



    <TextView
        android:id="@+id/First_tv"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/hello_boniface"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:textColor="@android:color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/Second_tv"
        app:layout_constraintTop_toBottomOf="@id/First_tv"
        android:layout_width="wrap_content"
        android:textSize="18sp"
        app:layout_constraintRight_toRightOf="parent"
        android:gravity="center_horizontal"
        android:layout_marginTop="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/here_is_your_grocery_items"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/Groceryname1"
        android:layout_width="200dp"
        android:background="@drawable/tv_bg"
        android:padding="8dp"
        android:hint="@string/grocery_name"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Second_tv"
        android:layout_height="40dp"/>

    <TextView
        android:id="@+id/Groceryprice1"
        android:layout_width="150dp"
        android:hint="@string/price"
        android:background="@drawable/tv_bg"
        android:gravity="center"
        android:inputType="number"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="@id/Groceryname1"
        app:layout_constraintLeft_toRightOf="@id/Groceryname1"
        android:layout_height="40dp"
        tools:ignore="TextViewEdits" />


    <TextView
        android:id="@+id/Groceryname2"
        android:layout_width="200dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/tv_bg"
        android:padding="8dp"
        android:hint="@string/grocery_name"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Groceryname1"
        android:layout_height="40dp"/>

    <TextView
        android:id="@+id/Groceryprice2"
        android:layout_width="150dp"
        android:hint="@string/price"
        android:gravity="center"
        android:background="@drawable/tv_bg"
        android:inputType="number"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="@id/Groceryname2"
        app:layout_constraintLeft_toRightOf="@id/Groceryname2"
        android:layout_height="40dp"
        tools:ignore="TextViewEdits" />

    <TextView
        android:id="@+id/Groceryname3"
        android:layout_width="200dp"
        android:layout_marginStart="10dp"
        android:hint="@string/grocery_name"
        android:background="@drawable/tv_bg"
        android:padding="8dp"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Groceryname2"
        android:layout_height="40dp"/>

    <TextView
        android:id="@+id/Groceryprice3"
        android:layout_width="150dp"
        android:hint="@string/price"
        android:gravity="center"
        android:inputType="number"
        android:background="@drawable/tv_bg"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="@id/Groceryname3"
        app:layout_constraintLeft_toRightOf="@id/Groceryname3"
        android:layout_height="40dp"
        tools:ignore="TextViewEdits" />

    <TextView
        android:id="@+id/Groceryname4"
        android:layout_width="200dp"
        android:layout_marginStart="10dp"
        android:hint="@string/grocery_name"
        android:background="@drawable/tv_bg"
        android:padding="8dp"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Groceryname3"
        android:layout_height="40dp"/>

    <TextView
        android:id="@+id/Groceryprice4"
        android:layout_width="150dp"
        android:hint="@string/price"
        android:gravity="center"
        android:background="@drawable/tv_bg"
        android:inputType="number"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="@id/Groceryname4"
        app:layout_constraintLeft_toRightOf="@id/Groceryname4"
        android:layout_height="40dp"
        tools:ignore="TextViewEdits" />

    <TextView
        android:id="@+id/Groceryname5"
        android:layout_width="200dp"
        android:layout_marginStart="10dp"
        android:hint="@string/grocery_name"
        android:background="@drawable/tv_bg"
        android:padding="8dp"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Groceryname4"
        android:layout_height="40dp"/>

    <TextView
        android:id="@+id/Groceryprice5"
        android:layout_width="150dp"
        android:hint="@string/price"
        android:gravity="center"
        android:background="@drawable/tv_bg"
        android:inputType="number"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="@id/Groceryname5"
        app:layout_constraintLeft_toRightOf="@id/Groceryname5"
        android:layout_height="40dp"
        tools:ignore="TextViewEdits" />

    <TextView
        android:id="@+id/Groceryname6"
        android:layout_width="200dp"
        android:layout_marginStart="10dp"
        android:hint="@string/grocery_name"
        android:background="@drawable/tv_bg"
        android:padding="8dp"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Groceryname5"
        android:layout_height="40dp"/>

    <TextView
        android:id="@+id/Groceryprice6"
        android:layout_width="150dp"
        android:hint="@string/price"
        android:gravity="center"
        android:inputType="number"
        android:background="@drawable/tv_bg"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="@id/Groceryname6"
        app:layout_constraintLeft_toRightOf="@id/Groceryname6"
        android:layout_height="40dp"
        tools:ignore="TextViewEdits" />


    <TextView
        android:id="@+id/Total_tv"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/total"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:padding="8dp"
        app:layout_constraintHorizontal_bias="0.43"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Groceryname6" />

    <TextView
        android:id="@+id/TotalTv"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginBottom="3dp"
        android:text="@string/textview"
        android:textSize="18sp"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="@id/Total_tv"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@id/Groceryprice6"
        app:layout_constraintRight_toRightOf="@id/Groceryprice6"
        app:layout_constraintTop_toBottomOf="@id/Groceryprice6"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>