<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Groceries"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/groceries"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Grocery_name1"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/tv_bg"
        android:hint="@string/grocery_name"
        android:paddingStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Groceries"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/Grocery_price1"
        android:layout_width="125dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/tv_bg"
        android:gravity="center"
        android:hint="@string/price"
        android:inputType="number"
        app:layout_constraintLeft_toRightOf="@id/Grocery_name1"
        app:layout_constraintTop_toTopOf="@id/Grocery_name1" />


    <EditText
        android:id="@+id/Grocery_name2"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/tv_bg"
        android:hint="@string/grocery_name"
        android:paddingStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Grocery_name1"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/Grocery_price2"
        android:layout_width="125dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/tv_bg"
        android:gravity="center"
        android:hint="@string/price"
        android:inputType="number"
        android:paddingStart="8dp"
        app:layout_constraintLeft_toRightOf="@id/Grocery_name2"
        app:layout_constraintTop_toTopOf="@id/Grocery_name2"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/Grocery_name3"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/tv_bg"
        android:hint="@string/grocery_name"
        android:paddingStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Grocery_name2"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/Grocery_price3"
        android:layout_width="125dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/tv_bg"

        android:gravity="center"
        android:hint="@string/price"
        android:inputType="number"
        app:layout_constraintLeft_toRightOf="@id/Grocery_name3"
        app:layout_constraintTop_toTopOf="@id/Grocery_name3"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/Grocery_name4"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/tv_bg"
        android:hint="@string/grocery_name"
        android:paddingStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Grocery_name3"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/Grocery_price4"
        android:layout_width="125dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/tv_bg"
        android:gravity="center"
        android:hint="@string/price"
        android:inputType="number"
        app:layout_constraintLeft_toRightOf="@id/Grocery_name4"
        app:layout_constraintTop_toTopOf="@id/Grocery_name4"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/Grocery_name5"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/tv_bg"
        android:hint="@string/grocery_name"
        android:paddingStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Grocery_name4"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/Grocery_price5"
        android:layout_width="125dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/tv_bg"
        android:gravity="center"
        android:hint="@string/price"
        android:inputType="number"
        app:layout_constraintLeft_toRightOf="@id/Grocery_name5"
        app:layout_constraintTop_toTopOf="@id/Grocery_name5"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/Grocery_name6"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/tv_bg"
        android:hint="@string/grocery_name"
        android:paddingStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Grocery_name5"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/Grocery_price6"
        android:layout_width="125dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/tv_bg"
        android:gravity="center"
        android:hint="@string/price"
        android:inputType="number"
        app:layout_constraintLeft_toRightOf="@id/Grocery_name6"
        app:layout_constraintTop_toTopOf="@id/Grocery_name6"
        tools:ignore="RtlSymmetry" />


    <Button
        android:id="@+id/Checkout_Button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/check_out"
        android:background="@drawable/btn_bg"
        android:textAllCaps="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Grocery_name6" />

    <TextView
        android:id="@+id/Total_Price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/Checkout_Button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Grocery_name6" />

</androidx.constraintlayout.widget.ConstraintLayout>